Initial commit: Coming Soon page with Supabase integration

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Futuristic Theme</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+    <!-- Load Supabase -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
     <div class="container">
@@ -44,6 +46,5 @@
         </div>
     </div>
     <script src="script.js"></script>
-    <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 </body>
 </html> 
